--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -105,71 +105,122 @@
         </section>
         <section id="about">
             <div class="container-fluid">
-                <h2>ABOUT ME</h2>
                 <div class="row">
+                    <h2>ABOUT ME</h2>
                     <div class="col-xs-12 col-md-3">
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                         <br>
-                        <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
-                            <i class="fa fa-chevron-right"></i>
-                            <span>Acknowledgements</span>
-                        </button>
-                        <div id="honors" class="skills-info collapse">
+                        <div>
+                            <h3>Personality</strong></h3>
                             <ul>
-                                <li>
-                                    <p>UPPER THIRD STUDENT - LABORATORIA'S 6° COHORT</p>
-                                    <p><i>jul. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>BEST SQUAD</p>
-                                    <p><i>jul. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>BEST SQUAD</p>
-                                    <p><i>may 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>JEDI MASTER</p>
-                                    <p><i>may 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>SPECIAL MENTION FOR TECH INNOVATION</p>
-                                    <p><i>abr. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>MOST PROACTIVE</p>
-                                    <p><i>feb. 2017</i></p>
-                                </li>
+                                <li>Determined</li>
+                                <li>Eye for detail</li>
+                                <li>Communicative</li>
+                                <li>Collaborative</li>
                             </ul>
+                            <h3>ACKNOWLEDGEMENTS</h3>
+
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#upperThird">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Upper Third Student</span>
+                            </button>
+                            <div id="upperThird" class="skills-info collapse">
+                                <p>Laboratoria graduate ranked in the upper third of the 6° cohort (July 2017).</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#bestSquad">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Best Squad</span>
+                            </button>
+                            <div id="bestSquad" class="skills-info collapse">
+                                <p>I got two badges during the 4° and 6° Sprint in Laboratoria (May - July 2017). This badges are given in recognition to the squad with the highest technical score on the sprint.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#jediMaster">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Jedi Master</span>
+                            </button>
+                            <div id="jediMaster" class="skills-info collapse">
+                                <p>I had the responsibility of being a Jedi Master in Laboratoria's 4° Sprint thanks to my high technical score on the 3° Sprint to do a follow up and make sure my team learned at the same pace. I made pre-quizzes and collected personal feedback from the members of my squad on the daily stand ups to write down small reports and share them with Laboratoria's team, to make sure no one was left behind.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#mention">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Special mention</span>
+                            </button>
+                            <div id="mention" class="skills-info collapse">
+                                <p>I got a Special Mention for Tech Innovation on the 3° Sprint in Laboratoria thanks to our project titled <em>Wanderlust</em> for the X Project, developed in 48 hours.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#proactive">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Most proactive</span>
+                            </button>
+                            <div id="proactive" class="skills-info collapse">
+                                <p>I got this badge on the 1° Sprint in Laboratoria in recognition for taking the time to make enough research on HTML and CSS to allow me to build a Trello replica, so I was able to add the structure and design for one of our last projects without it being a requirement.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
-                            <div class="col-md-12">
-                                <h4><strong><em>TLTR version</em></strong></h4>
-                            </div>
                             <div class="col-md-7">
-                                <p>Hello! My name is Annia, I'm a <em>front-end developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate, currently living in Lima, Peru. I'm interested in <strong>social issues</strong>, <strong>entrepreneurship</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>design</strong>, <strong>UX</strong>, <strong>branding</strong>, <strong>good practices</strong> in everything I do (amongst other things) &amp; <strong>spanish</strong> is my first language.
-                                    <br>
-                                    <br>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new web development standards.</p>
+                                <p>Hi! My name is Annia, I'm a <em>front-end developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
+                                <p>I'm currently looking to become a part of a team of entrepreneurs and visionaries determined to change the world with technology. I'm a very passionate and commited person with the goals I set to myself and those are some of the things that characterize me, I believe I would fit in perfectly in a design-driven team that works with agile methodologies, since it's what I've been trained for in the past months.</p>
+                                <p>My performance in Laboratoria has been pretty good, I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to and I think this kind of mindset really helped me get through the program with a few acknowledgements.</p>
+
+                                <h3>Interests</h3>
+                                <p>I'm really interested in social issues and entrepreneurship, on the other hand UX is something that has really caught my attention and I'm taking courses in some of my free time to learn more about it even though my main focus is web development. On that side I'm looking forward to learn about front-end frameworks to develop a quicker work pace as well as the best practices on the field. Laboratoria is still a huge support in my career as a developer and I'll continue to learn with them until I get a fullstack knowledge in JavaScript.</p>
+                                <p>Apart from that I have a huge love for music, design, photography and one of the platforms I use to share some of my other hobbies is Instagram, so you can find more of the things that inspire me right there.</p>
                             </div>
-                            <div class="col-md-5">
-                                <h5><strong>SKILL SET</strong></h5>
-                                <p>HTML5, CSS3, Materialize, Bootstrap, SASS, BEM, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), SEO, HTTP JSON &amp; API requests.</p>
-                                <h5><strong>TOOLS</strong></h5>
-                                <p>Brackets, Git, GitHub, Gulp, Heroku.</p>
+                            <div class="about-content col-md-5">
+                                <h3>SKILL SET</h3>
+                                <ul>
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                    <li>SASS</li>
+                                    <li>BEM</li>
+                                    <li>JavaScript</li>
+                                    <li>ECMAScript 6</li>
+                                    <li>jQuery &amp; AJAX</li>
+                                    <li>Bootstrap</li>
+                                    <li>Materialize</li>
+                                    <li>npm (package manager)</li>
+                                    <li>SEO</li>
+                                    <li>HTTP JSON &amp; API requests</li>
+                                </ul>
+                                <br>
+                                <h3>TOOLS</h3>
+                                <ul>
+                                    <li>Brackets</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
+                                    <li>Gulp</li>
+                                    <li>Heroku</li>
+                                    <li>Adobe XD</li>
+                                    <li>Illustrator</li>
+                                </ul>
+                                <h3>LANGUAGES</h3>
+                                <ul>
+                                    <li>Español - Nativo</li>
+                                    <li>English - Bilingual proficiency</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
                 <hr>
-                <div class="row">
-                    <div class="about__long col-md-12">
-                        <h4><strong><em>Long version</em></strong>
-                            <a href="#interests" class="skip"><i class="fa fa-arrow-right"></i> (Skip)</a></h4>
-                        <img class="img-right" src="img/omfg.jpg" alt="Annia making OMFG! Accesories">
-                        <p>My first job was when I was 19 when I <strong>decided</strong> to turn my hobby into a small business and I opened up an online handmade jewelry shop on Facebook having in mind that I was going to learn a lot about e-commerce to some extent. It was an amazing learning experience where I developed a strong interest on <strong>entrepreneurship</strong>, <strong>branding</strong> and the way my customers experienced the shopping process, (<strong>UX</strong> got a lot of my attention once I discovered it too later on). The project helped me develop my <strong>organization</strong>, <strong>planning</strong>, <strong>detail oriented</strong> and <strong>photography skills</strong>.</p>
-                        <p>I've learnt many things by myself, one of them was <strong>this language</strong>, I started speaking english quite fluently since I was about 14. My interest on <strong>social issues</strong> came up right after that, since learning the language opened up a whole new world of information to my eyes and I had access to lots of new things. Before I got into Laboratoria I started another entrepreneurship adventure, but this time I wanted to focus on social issues that were close to my heart such as <strong>environmental pollution</strong>, <strong>sustainability</strong> and <strong>cruelty-free products</strong>.</p>
+                <div id="interests" class="row">
+                    <div class="insta-feed col-md-12">
+                        <script src="https://snapwidget.com/js/snapwidget.js"></script>
+                        <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--section id="about">
+            <div class="container-fluid">
+                            <div class="col-md-7">
+                                <p>Hello! My name is Annia, I'm a <em>front-end developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate, currently living in Lima, Peru. I'm interested in <strong>social issues</strong>, <strong>entrepreneurship</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>design</strong>, <strong>UX</strong>, <strong>branding</strong>, <strong>good practices</strong> in everything I do (amongst other things) &amp; <strong>spanish</strong> is my first language.
+                                    <br>
+                                    <br>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new web development standards.</p>
+                            </div>
+                
                         <p>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new web development standards. One of my long term life goals is to create things that generate new oportunities for other people and things that solve real world problems, I've got a long way to go.</p>
                         <p>I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to; it's basically my motto and it definitely helped me along the way while attending Laboratoria where I learned a lot of things from scratch while humbly getting a few acknowledgements from the program.</p>
                     </div>
@@ -180,13 +231,9 @@
                         <p>I'm quite interested in e-learning, front-end frameworks for a quicker work pace and learning the best practices in the field; effective social media management, design and personal growth are other things that catch my interest.</p>
                         <p>I'm really into music and photography as well and one of the platforms I use to share some of my other hobbies is Instagram.</p>
                     </div>
-                    <div class="insta-feed col-md-12">
-                        <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                        <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
-                    </div>
                 </div>
             </div>
-        </section>
+        </section-->
         <header class="header-bot hidden-xs">
             <section class="container-fluid parallax-section text-center">
                 <div class="header-bot__inner">
