--- a/public/index.html
+++ b/public/index.html
@@ -384,7 +384,7 @@
                                 <span>La más proactiva</span>
                             </button>
                             <div id="proactive" class="skills-info collapse">
-                                <p>Badge otorgado a la más proactiva del sprint en Laboratoria. Este badge lo recibí en el 1° Sprint al tomarme el tiempo de investigar lo suficiente sobre HTML y CSS para poder desarrollar una réplica de Trello, agregándole así el maquetado a uno de los últimos proyectos del sprint.</p>
+                                <p>Badge otorgado a la más proactiva del sprint en Laboratoria. Este badge lo recibí en el 1° Sprint al tomarme el tiempo de investigar lo suficiente sobre HTML y CSS para poder desarrollar una réplica de Trello, agregándole así el maquetado a uno de los últimos proyectos del sprint sin ser esto un requerimiento.</p>
                             </div>
                         </div>
                     </div>
@@ -392,11 +392,11 @@
                         <div class="col-md-12">
                             <div class="col-md-7">
                                 <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer junior</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
-                                <p>En la actualidad busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con la tecnología. Soy una persona súper apasionada y comprometida con las cosas que me trazo y son algunas de las cosas que me caracterizan, pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
+                                <p>En la actualidad busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con la tecnología. Soy una persona súper apasionada y comprometida con las metas que me trazo y son algunas de las cosas que me caracterizan, pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
                                 <p>Mi desempeño en Laboratoria fue bastante bueno, tengo la certeza de que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer y estoy segura que ese mindset me ayudó a obtener varios reconocimientos a lo largo del programa.</p>
 
                                 <h3>Intereses</h3>
-                                <p>Me interesan mucho las causas sociales y el emprendimiento, por otro lado el UX es algo que llama mucho mi atención y estoy llevando cursos en mi tiempo libre para aprender más del tema aunque por lo pronto mi enfoque principal sea el desarrollo web. Por ese lado me interesa aprender sobre más front-end frameworks para agilizar mi ritmo de trabajo y también sobre las mejores prácticas en el ámbito. Laboratoria sigue siendo un gran soporte y seguiré instruyéndome con ellos hasta obtener conocimientos fullstack en JavaScript.</p>
+                                <p>Me interesan mucho las causas sociales y el emprendimiento, por otro lado el UX es algo que llama mucho mi atención y estoy llevando cursos en mi tiempo libre para aprender más del tema aunque por lo pronto mi enfoque principal sea el desarrollo web. Por ese lado me interesa aprender sobre más front-end frameworks para agilizar mi ritmo de trabajo y también sobre las mejores prácticas en el ámbito. Laboratoria sigue siendo un gran soporte en mi carrera como developer y seguiré instruyéndome con ellos hasta obtener conocimientos fullstack en JavaScript.</p>
                                 <p>Muy aparte tengo gran afición por la música, diseño, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram, así que pueden ver más sobre las cosas que me inspiran ahí.</p>
                             </div>
                             <div class="about-content col-md-5">
@@ -425,6 +425,11 @@
                                     <li>Heroku</li>
                                     <li>Adobe XD</li>
                                     <li>Illustrator</li>
+                                </ul>
+                                <h3>IDIOMAS</h3>
+                                <ul>
+                                    <li>Español - Nativo</li>
+                                    <li>English - Bilingual proficiency</li>
                                 </ul>
                             </div>
                         </div>
