--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -96,9 +96,9 @@
                         <button type="button" class="btn" data-toggle="modal" data-target="#trello-modal">Local API, Components &amp; jQuery</button>
                     </div>
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
-                        <h3>THIS IS NEAT</h3>
-                        <p>Responsive replica of the website using Bootstrap.</p>
-                        <button class="btn">JavaScript, Bootstrap, HTML5</button>
+                        <h3>FAB</h3>
+                        <p>Responsive replica of the FAB e-commerce website using the Foundation framework.</p>
+                        <button class="btn">Foundation, HTML5, CSS3</button>
                     </div>
                 </div>
             </div>
@@ -180,6 +180,7 @@
                                     <li>jQuery &amp; AJAX</li>
                                     <li>Bootstrap</li>
                                     <li>Materialize</li>
+                                    <li>Foundation</li>
                                     <li>npm (package manager)</li>
                                     <li>SEO</li>
                                     <li>HTTP JSON &amp; API requests</li>
@@ -213,27 +214,6 @@
                 </div>
             </div>
         </section>
-        <!--section id="about">
-            <div class="container-fluid">
-                            <div class="col-md-7">
-                                <p>Hello! My name is Annia, I'm a <em>front-end developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate, currently living in Lima, Peru. I'm interested in <strong>social issues</strong>, <strong>entrepreneurship</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>design</strong>, <strong>UX</strong>, <strong>branding</strong>, <strong>good practices</strong> in everything I do (amongst other things) &amp; <strong>spanish</strong> is my first language.
-                                    <br>
-                                    <br>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new web development standards.</p>
-                            </div>
-                
-                        <p>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new web development standards. One of my long term life goals is to create things that generate new oportunities for other people and things that solve real world problems, I've got a long way to go.</p>
-                        <p>I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to; it's basically my motto and it definitely helped me along the way while attending Laboratoria where I learned a lot of things from scratch while humbly getting a few acknowledgements from the program.</p>
-                    </div>
-                </div>
-                <div id="interests" class="row">
-                    <div class="col-md-12">
-                        <h3>Interests</h3>
-                        <p>I'm quite interested in e-learning, front-end frameworks for a quicker work pace and learning the best practices in the field; effective social media management, design and personal growth are other things that catch my interest.</p>
-                        <p>I'm really into music and photography as well and one of the platforms I use to share some of my other hobbies is Instagram.</p>
-                    </div>
-                </div>
-            </div>
-        </section-->
         <header class="header-bot hidden-xs">
             <section class="container-fluid parallax-section text-center">
                 <div class="header-bot__inner">
