--- a/src/index.html
+++ b/src/index.html
@@ -94,9 +94,9 @@
                         <button type="button" class="btn" data-toggle="modal" data-target="#trello-modal">API local, Componentes &amp; jQuery</button>
                     </div>
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
-                        <h3>THIS IS NEAT</h3>
-                        <p>Réplica de la página original en vista desktop y responsive.</p>
-                        <button type="button" class="btn" data-toggle="modal" data-target="#neat-modal">JavaScript, Bootstrap, HTML5</button>
+                        <h3>FAB</h3>
+                        <p>Réplica responsive del sitio e-commerce de FAB, utilizando el framework Foundation.</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#fab-modal">Foundation, HTML5, CSS3</button>
                     </div>
                 </div>
             </div>
@@ -122,6 +122,8 @@
                                     <li>Vanilla JavaScript</li>
                                     <li>CSS3</li>
                                     <li>HTML5</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
                                 </ul>
                                 <h4>Reconocimientos</h4>
                                 <p>Mención especial por innovación tech en Laboratoria.</p>
@@ -191,6 +193,8 @@
                                     <li>SASS</li>
                                     <li>BEM</li>
                                     <li>HTML5</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
                                     <li>Heroku</li>
                                     <li>Pinterest API</li>
                                 </ul>
@@ -249,6 +253,8 @@
                                     <li>CSS3</li>
                                     <li>Materialize</li>
                                     <li>npm</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
                                 </ul>
                             </div>
                             <div class="col-md-8 col-xs-12">
@@ -292,14 +298,14 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="neat-modal" role="dialog">
+        <div class="modal fade" id="fab-modal" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="container">
                         <div class="modal-header row">
                             <div class="col-md-12">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">THIS IS NEAT</h3>
+                                <h3 class="modal-title">FAB</h3>
                             </div>
                         </div>
                         <div class="modal-body row">
@@ -307,26 +313,28 @@
                                 <h4>Cliente</h4>
                                 <p>Laboratoria</p>
                                 <h4>Mi función</h4>
-                                <p>Recrear la página original utilizando componentes de Bootstrap.</p>
+                                <p>Recrear el landing page utilizando Foundation.</p>
                                 <h4>Tecnologías</h4>
                                 <ul>
-                                    <li>Bootstrap</li>
-                                    <li>JavaScript</li>
                                     <li>HTML5</li>
                                     <li>CSS3</li>
+                                    <li>Foundation</li>
+                                    <li>Owl Carousel jQuery Plugin</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
                                 </ul>
                             </div>
                             <div class="col-md-8 col-xs-12">
                                 <div class="col-md-12">
-                                    <p>Requerimiento: Utilizar componentes de Bootstrap.</p>
+                                    <p>Requerimiento: Hacer el maquetado utilizando clases de Foundation.</p>
                                 </div>
                                 <div class="col-md-12">
                                     <h4>PROCESO</h4>
-                                    <p>Hice que el posicionamiento de varios elementos cambiara de acuerdo al tamaño de la pantalla con clases de Bootstrap. Utilicé JavaScript para que el contenido de la página suba al momento de cerrar a barra de promoción.</p>
+                                    <p>Este fue un trabajo que desarrollé con una compañera y nos repartimos responsabilidades para terminar el trabajo en la fecha indicada. Yo fui la encargada de desarrollar la página de inicio y mi compañera se encargó de desarrollar la página de producto.</p>
                                 </div>
                                 <div class="col-md-12 modal__btns">
-                                    <a class="modal-btn" href="https://github.com/itsandromeda/This-is-Neat" target="_blank">Código</a>
-                                    <a class="modal-btn" href="https://itsandromeda.github.io/This-is-Neat/" target="_blank">Demo</a>
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Fab" target="_blank">Código</a>
+                                    <a class="modal-btn" href="https://itsandromeda.github.io/Fab/" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -411,6 +419,7 @@
                                     <li>jQuery &amp; AJAX</li>
                                     <li>Bootstrap</li>
                                     <li>Materialize</li>
+                                    <li>Foundation</li>
                                     <li>npm (package manager)</li>
                                     <li>SEO</li>
                                     <li>HTTP JSON &amp; consumo de APIs</li>
